--- a/css/main.css
+++ b/css/main.css
@@ -136,13 +136,21 @@ li {
 /* Footer Section */
 
 span {
+  position: fixed;
+  left: 0;
+  bottom: 50px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 50% 50%;
+  padding-bottom: 10px;
+  padding: 5px;
+  background-color: #f2f2f2;
   color: #0000008a;
   font: 15px arial, sans-serif;
-  margin-left: 30px;
-  text-align: left;
-  display: block;
+  margin-left: 35px;
   line-height: 1.15;
-  bottom: 0;
+  /*text-align: left;
+  display: block; */
 }
 
 .footer {
